--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="Omar Ziyada">
 <title>Lotto-Spiel</title>
+<iframe src="https://omarziyada1.github.io/Lotto-Spiel/index.html" width="100%" height="600"></iframe>
 
 <link rel="stylesheet" href="style.css">
 
